add_library(queue_p queue_p.hpp queue_p.cpp)
add_library(c_queue_p SHARED c_queue_p.h c_queue_p.cpp)
add_executable(queue_p_test queue_p_test.cpp)
add_executable(c_queue_p_test c_queue_p_test.c)
target_link_libraries(queue_p_test queue_p)
target_link_libraries(c_queue_p queue_p)
if (WIN32)
	set_target_properties(c_queue_p PROPERTIES DEFINE_SYMBOL "C_QUEUE_P_EXPORTS")
endif()
target_link_libraries(c_queue_p_test c_queue_p)
